I.28 Skoky, PP, FF

--- a/fopp3ed-slovak.tex
+++ b/fopp3ed-slovak.tex
@@ -891,7 +891,34 @@ Beethovenova Sonáta Tempest (Op. 31, č. 2) obsahuje krásne ukážky formálny
 \ 
 
 \section{Skoky, PP, FF, cítenie kláves}\label{s:jumps}
-\ 
+Úspešní klaviristi zvládajú skoky bez námahy, hrajú rýchlo a presne bez ohľadu na to, kde sú klávesy. Študenti bez tréningu skokov nevedia prísť na to, ako to môže niekto dokázať. Majú problémy, pretože majú tendenciu pohybovať rukou pozdĺž obráteného pohybu tvaru písmena V, čo sťažuje presné zasiahnutie klávesu, pretože ruka klesá v určitom ľubovoľnom uhle, ktorý sa mení s každým skokom. Tieto zmeny zvyšujú možnosť vynechania nôt a klávesy sú hrané pohybom do strán namiesto priamo nadol. Ďalším problémom je, že rýchle skoky sú nemožné, pretože sa na cieľové klávesy nikdy nedokážu dostať načas.
+
+\textbf{Skoky (rýchle pohyby)}\index{skoky} pozostávajú zo štyroch pohybov: (1) vzlet, (2) horizontálny posun ruky do správnej polohy, (3) nahmatávanie kláves v cieľovej pozícii a (4) pohyb klávesu smerom nadol. Kombinovaný pohyb by mal vyzerať skôr ako obrátené „U“ a nie ako obrátené „V“. Toto obrátené U má krátke konce a plochý vrch; to znamená, že aspoň na začiatku nedvíhajte ruku ďaleko nad klávesy; jedinou výnimkou je situácia, keď potrebujete prejsť cez druhú ruku.
+
+Zvyknite si robiť rýchle vzlety bez ohľadu na rýchlosť skoku. Nie je nič zlé na tom, keď sa na cieľovú klávesu dostanete v predstihu. Aj keď cvičíte pomaly, mali by ste trénovať rýchle vzlety, aby táto zručnosť bola k dispozícii, keď ju budete potrebovať. Začnite vzlietnutie malým pustením zápästia smerom nadol a do strán, pričom rukou sa vydáte smerom k cieľu. Na rozdiel od pohybu nadol na konci, vzlety nemusia ísť priamo hore a okamžite začnete pohyb smerom k cieľu.
+
+\textbf{Najdôležitejšou zručnosťou na cvičenia je urobiť horizontálny pohyb} čo najrýchlejšie, aby ste si vyhradili dostatok času na nájdenie kláves, keď ruka dosiahne svoj cieľ. Možno vás prekvapí, o koľko rýchlejšie sa dokážete pohybovať vodorovne iba po niekoľkých dní cvičenia – niečo, čo niektorí študenti nedosiahnu za celý život, pretože ich tento pohyb nikdy nenaučili.
+
+Ak chcete cvičiť rýchle horizontálne pohyby, sadnite si kdekoľvek s lakťom rovno nadol, predlaktie smeruje dopredu, prsty sú roztiahnuté v polohe hrania na klavíri. Rýchlo posuňte ruku do strán, rovnobežne s podlahou, ako pri skokovom pohybe. Rýchlo odsuňte ruku od seba a zastavte sa, potom ju okamžite uvoľnite; rameno sa nehýbe. Potom sa rýchlo vráťte do pôvodnej polohy. Cvičte pohyby dnu a von tak rýchlo, ako len môžete, ale po každom pohybe sa úplne uvoľnite. Väčšinu tohto pohybu tvorí kývavá rotácia predlaktia okolo nadlaktia s malým pohybom lakťa. Od prvého dňa by ste mali vidieť okamžité zlepšenie vo svojich skokoch, ak ste to nikdy predtým necvičili; ale časom sa táto horizontálna rýchlosť zvýši natoľko, že skoky budú rýchlo jednoduché.
+
+\textbf{Cítenie kláves}\index{cítenie kláves} možno vykonať prekvapivo rýchlo. Zvyčajne je na to dostatok času. Preto je dobrou zásadou vždy cítiť klávesy, pretože to zaručuje 100\% presnosť. Existuje niekoľko prípadov, v ktorých nie je čas cítiť klávesy, a tých pár sa dá zahrať presne, ak ste väčšinu ostatných skokov presne lokalizovali tak, že ich budete cítiť. Zvyk cítiť klávesy zlepšuje vašu všeobecnú presnosť pri lokalizácii kláves, aj keď ich necítite, pretože si v mysli vytvoríte presnejšiu mapu miest kláves.
+
+Teraz, keď poznáte zložky skoku, pozerajte ich počas vystúpenia koncertných klaviristov. Teraz by ste mali byť schopní identifikovať každú zložku a možno vás prekvapí, ako často cítia klávesy predtým, ako ich zahrajú, a ako dokážu tieto zložky vykonať mihnutím oka. Tieto zručnosti vám umožnia robiť dlhé skoky aj bez toho, aby ste sa pozerali na ruky.
+
+Aby ste znížili napätie, uvoľnite všetky svaly hneď po skončení horizontálneho pohybu a po zahraní nôt. Často sa vyskytujúcimi skladbami na precvičovanie ľahkých skokov sú: (1) pre ĽR, 4. variácia Mozartovej sonáty v A, \#11 (K331); táto variácia má veľké skoky, v ktorých ĽR prechádza cez PR a (2) PR, 1. časť Beethovenovej Pathetique Sonata (Opus 13), hneď po ĽR oktávových tremolách (po takte 50), kde PR robí skoky prekračujúce cez ĽR. Náročnejšou pasážou je Chopinova Balada op. 23, na konci ĽR skáče v prvej polovici “Presto con fuoco”.
+
+Pomocou jednoduchých skokov si pred hraním precvičte zrýchlenie horizontálneho pohybu, zastavenie nad správnou pozíciou a nahmatanie kláves. Myšlienkou je vytvoriť si zvyk dostať sa rukami do cieľovej pozície vždy v predstihu. Keď je rýchly horizontálny pohyb uspokojivý, zrýchlite tempo a skombinujte všetky štyri zložky skoku do jedného plynulého pohybu. Teraz váš skok vyzerá rovnako ako skoky koncertných klaviristov, ktorým ste závideli. Ešte lepšie je, že skoky sú teraz jednoduché a zábavné!
+
+\textbf{PP}\index{pianissimo}, \textbf{FF}\index{fortissimo}: Je ťažké hrať potichu (P) a PP je nemožné na klavíri, ktorý je mimo regulácie alebo nie je znejúci. Väčšina pianín zlyhá na testoch PP aj FF, a to je jeden z hlavných rozdielov medzi pianínami a kvalitnými krídlami. Skutočnosť, že klavír vyzerá ako krídlo, ho automaticky nekvalifikuje ako skutočné krídlo. Prakticky všetky rozmerovo malé krídla nie sú skutočné krídla. \textbf{Ak nástroj nedokáže produkovať PP alebo FF, nemôžete ich cvičiť!} To je hlavný dôvod, prečo toľko študentov nemôže hrať PP alebo FF; nie je to chyba študentov.
+
+S výnimkou vysoko kvalitných krídel, ktoré sú správne regulované, je väčšina mechaník  akustických klavírov príliš ťažká, pretože je náročné vytvoriť citlivé mechaniky, ktoré sú ľahšie. Chopinove a Horowitzove klavíry sú známe svojimi ľahkými mechanikami.
+
+Elektronické klavíry toto obmedzenie nemajú, a preto majú ľahšie mechaniky. Musia mať určitú minimálnu hmotnosť, aby klavirista cvičiaci na elektronickom klavíri mohol hrať aj na akustických klavíroch s ich ťažšími mechanikami. V súčasnosti môžu byť mechaniky stále príliš ťažké na optimálnu hmotnosť, ale tento bod je kontroverzný, pretože príliš mechanika je v niektorých ohľadoch menej zhovievavá: v závislosti od mechaniky a klaviristu môže ťažšia mechanika poskytnúť lepšie výsledky pre ťažký materiál, kvôli možnosti náhodného zasiahnutia nesprávnych tónov, keď prsty lietajú po celom klavíri. To je jeden z dôvodov, prečo sú tiché prsty \fullrefp{s:quiet-hands} také dôležité. Preto otázka, ktorá váha kláves je najlepšia, nebola vyriešená a pravdepodobne závisí od jednotlivca; Dnešné elektronické klavíre sa však so svojimi ľahšími mechanikami môžu priblížiť k optimu než akustické klavíre.
+
+Bohužiaľ, ľahšia mechanika elektronických klavírov neznamená, že sú lepšie z hľadiska odozvy, PP a FF. Drahšie elektronické klavíre majú lepšie odozvy. Aby ste ich skutočne otestovali, mali by byť napojené na kvalitné audio systémy, najmä reproduktory. To je dôvod, prečo sa dnes predáva veľa digitálnych zariadení spolu so subwoofermi. PP sa najlepšie cvičí pomocou cvičenia staccato \fullrefp{s:staccato}.
+
+FF je nová zručnosť; naučiť sa FF a techniku súčasne je ťažké — najprv sa naučte techniku, cvičte na P, potom pridajte FF. FF je produkovaný silou z ramien viac ako z rúk. Ide o razantné zrýchlenie počas stlačenia klávesy. Nie je potrebné dvíhať ruku vysoko nad klávesy; zrýchlenie počas poklesu klávesu je kľúčom. Relax je pre FF obzvlášť dôležitý, pretože akékoľvek napätie odsaje energiu, ktorú potrebujete.
+
 
 \section{Stupnice: názvoslovie a prstoklady}\label{s:scales}
 \textbf{Stupnice a arpeggiá}\index{stupnice a arpeggiá} musíte cvičiť, aby ste získali základné techniky a štandardné prstoklady pre rutinné hranie a hru z listu tak, že ich môžte hrať bez rozmýšľania nad tým, ako ide každá nota a prst. Cvičte ich vo všetkých durových a molových tóninách. Keď sa oboznámite s prstokladmi, nie je potrebné cvičiť ich každý deň aj keď sú výbornými zahrievacími cvičeniami.
