I.27 Degradácia rýchleho hrania, eliminácia zlozvykov

--- a/fopp3ed-slovak.tex
+++ b/fopp3ed-slovak.tex
@@ -888,7 +888,29 @@ Hudobné frázy zvyčajne začínajú a končia jemne, ale prvý úder väčšin
 Beethovenova Sonáta Tempest (Op. 31, č. 2) obsahuje krásne ukážky formálnych a logických rytmov (ako prakticky každá Beethovenova skladba). V 3. časti sú prvé 3 takty 3 opakovaniami rovnakej štruktúry a jednoducho nasledujú formálny rytmus. V takte 43-46 je však v PR 6 opakovaní rovnakej štruktúry, ktoré však treba vtesnať do 4 formálnych rytmických taktov! Hrať 6 rovnakých opakovaní v PR je nesprávne, pretože treba dodržiavať formálne akcenty. Pomôcka: LH je „štandardný“ a dá sa ľahko zistiť, takže skopírujte tento rytmus do RH. Na druhej strane, v takte 47 a 55 je nečakané „sf“, ktoré nemá nič spoločné s formálnym rytmom, ale je úplne zásadným logickým rytmom. Aj keď je usporiadanie nôt pomerne jednoduché, správne zahrať dynamiku v tejto časti je zložité a bez Beethovenových znakov by ich správne neuhádol prakticky nikto. Je úžasné, ako Beethoven šikovne použil formálne akcenty, aby nám presne povedal, ako to máme hrať pri väčšine hudby. Neočakávané logické akcenty sú charakteristickým znakom Beethovenovej geniality a ukázali nám, že dynamika je sama o sebe silným jazykom a že porušenie pravidiel formálnych akcentov môže priniesť vyššiu úroveň hudobnej logiky.
 
 \section{Degradácia rýchleho hrania, eliminácia zlozvykov}\label{s:fast-degradation}
-\ 
+Prehrajte akúkoľvek kompozíciu plnou rýchlosťou (alebo rýchlejšie) a môžete trpieť \textbf{“Degradáciou rýchleho hrania” (DRH)}. Nasledujúci deň to tiež nemôžete hrať. Stáva sa to väčšinou pri hre RS. Hra RZ je voči DRH imúnnejšia a v skutočnosti sa dá použiť na jej opravu. K DRH dochádza pravdepodobne preto, že ľudský herný mechanizmus (ruky, mozog atď.) sa pri takýchto rýchlostiach zmätie, a preto sa vyskytuje iba pri komplexnom materiáli, ako je hra RS koncepčne alebo technicky náročného materiálu. Ľahké skladby majú tendenciu netrpieť DRH. Študenti, ktorí sa snažia zrýchliť RS, môžu naraziť na problémy s DRH a štandardným riešením bolo cvičiť len pomaly po dlhú dobu, čím sa stráca príliš veľa času.
+
+Cvičenie RZ je lepšie riešenie. To zjednodušuje hudbu, znižuje zmätok a odstraňuje všetky zlé návyky, ktoré vznikli pri rýchlom hraní RS. Jedným účinným spôsobom, ako sa vyhnúť DRH, je vždy hrať pomaly aspoň raz pred ukončením.
+
+Najdôležitejšia vec na DRH je vedomie, že existuje, aby ste sa nenechali zaskočiť a vedeli, čo robiť, aby ste to vyriešili. Ak o FPD nič neviete a pociťujete jej príznaky, môžete trpieť psychickými problémami, pretože nič nefunguje bez známeho dôvodu.
+
+\textbf{Zlé návyky:} Začiatočníci začínajú s mnohými zlými návykmi, ktoré učitelia ľahko rozpoznajú. Úlohou učiteľa je uprednostniť ich a jednu po druhej opraviť. Bežné zlozvyky sú zlý dotyk, nadmerné používanie damper pedálu, slabé (vystrašené) prsty, zadrhávanie, nesprávna rýchlosť, nedostatok rytmu a muzikálnosti, nekontrolované pohyby atď. akonáhle sa vytvoria, trvá tak dlho, kým sa napravia, pričom predchádzať im je oveľa, oveľa jednoduchšie, ak sa včas prijmú preventívne opatrenia.
+
+Niektorí začiatočníci búchajú do klavíra bez ohľadu na muzikálnosť. Študent prirovnáva hlasitosť k vzrušeniu. Stáva sa to preto, že študenti sú tak zaujatí cvičením, že zabúdajú počúvať zvuky vychádzajúce z klavíra. Je dôležité vypestovať si návyk počúvať samých seba a \textbf{hlavnou úlohou učiteľa je ukázať, ako znie “muzikálne”. Schopnosť rozlišovať medzi hudobným a nehudobným je najdôležitejšou zručnosťou, ktorú si žiaci musia pestovať.} Počúvanie seba samého je ťažšie, ako si mnohí ľudia uvedomujú, pretože mnohí študenti vynakladajú všetku svoju námahu na hranie a na počúvanie im nezostáva nič. Najlepší spôsob, ako obísť tento problém, je nahrať prehrávanie na video a počúvať/sledovať, aby ste našli spôsoby, ako sa zlepšiť. Nie je potrebné celý život nahrávať na video, pretože to stratí príliš veľa času. Urobte to dostatočne často, kým sa naučíte počúvať sami seba a budete schopní počúvať pri cvičení.
+
+Potom sú tu tí so slabými prstami. Je to spôsobené tým, že sa neuvoľníte a nenecháte vládnuť gravitáciu. Študentovi chýba sebadôvera a podvedome dvíha ruky, čo vytvára stres, takže rýchlosť a muzikálnosť sú nemožné. Títo študenti sa musia naučiť celý dynamický rozsah klavíra, ako tento rozsah využívať a predovšetkým relaxovať. Študenti cvičiaci na starých klavíroch so zhutnenými kladivami, ktoré nemajú zvuk, môžu mať “slabé prsty”, pretože takéto klavíry produkujú pri bežnom hraní príliš veľa zvuku. Najlepším riešením je najať si ladiča klavírov, ktorý vie, ako ozvučiť kladivká.
+
+Ďalším zlozvykom je hranie nesprávnou rýchlosťou, buď príliš rýchlo alebo príliš pomaly, najmä počas predstavenia, keď sú študenti vzrušení a strácajú zmysel pre tempo. Správna rýchlosť je určená mnohými faktormi, vrátane obtiažnosti skladby s ohľadom na technickú zdatnosť, čo môže publikum očakávať, stav klavíra, ktorá skladba predchádzala alebo bude nasledovať po tejto skladbe atď. hrať skladby príliš rýchlo nad ich úroveň zručností a nakoniec budú robiť chyby, zatiaľ čo iní sú bojazliví a hrajú príliš pomaly, čím nevyužívajú hudbu naplno. Hrať pomaly môže byť náročnejšie ako hrať správnou rýchlosťou, čo len znásobuje problémy bojazlivého hráča. Tí, ktorí hrajú príliš rýchlo, môžu byť psychicky odradení, pretože robia príliš veľa chýb a nadobudnú presvedčenie, že sú biedny klaviristi. Tieto problémy sa netýkajú len vystúpení, ale aj cvičenia; tí, ktorí cvičia príliš rýchlo, si môžu nakoniec myslieť, že sú biedny klaviristi, pretože robia chyby a pokrok je pomalý. Len malé spomalenie im môže umožniť hrať presne a krásne a z dlhodobého hľadiska rýchlejšie získať techniku. Na boj proti tomuto problému niektoré školy klavíra vôbec neumožňujú rýchlu hru. To nie je optimálne, pretože žiaci sa budú učiť pomalším tempom.
+
+Začiatočníci často hrajú mechanicky ako metronóm, v snahe “hrať presne” a pretože sa nenaučili význam muzikálnosti. Treba ich naučiť, že rytmus je jazyk a že malé odchýlky od prísneho načasovania sa používajú na komunikáciu hudobných konceptov atď.
+
+Zlá kvalita tónu je ďalším bežným problémom. Počas cvičenia nikto nepočúva, takže sa zdá, že na tóne nezáleží; študent možno ani nepozná pojem tón. Študenti sa musia vždy snažiť o tón, pretože ten je najdôležitejšou súčasťou hudby. Dobrý tón sa nedá vyrobiť na mizernom alebo neregulovanom klavíri; toto je hlavný dôvod, prečo študenti potrebujú slušný klavír a prečo sú ladenie, regulácia a ozvučenie kladiviek dôležitejšie, než si väčšina študentov a ich rodičov uvedomuje. Počúvanie dobrých nahrávok je najlepší spôsob, ako prebudiť študenta k existencii dobrého tónu. Ak počúvajú iba svoju hru, možno ani netušia, čo znamená dobrý tón. Na druhej strane, akonáhle budú venovať pozornosť tónu a začnú dosahovať výsledky, hraním sa tón bude zlepšovať a zlepšovaním tónu sa bude zlepšovať hra čím sa môžu naučiť vytvárať zvuky, ktoré priťahujú publikum.
+
+Zadrhávanie je spôsobené cvičením zastav-a-pokračuj, pri ktorom má študent vo zvyku zastaviť, aby si prehral časť vždy, keď dôjde k chybe. V prípade chyby \emph{vždy hrajte ďalej}; neprestávajte to napraviť. V duchu si poznačte, kde bola chyba a precvičte si túto časť neskôr. Vylovte malý segment obsahujúci túto chybu (zvyčajne niekoľko taktov) a pracujte na ňom. Keď si zvyknú hrať cez chyby, študenti môžu prejsť na ďalšiu úroveň predvídania chýb a vyhýbania sa, ako je zjednodušenie sekcie, udržiavanie rytmu alebo melódie cez zbabrané tóny alebo dokonca len mierne zrýchlenie a používanie pamäti rúk, ktorá vás cez to prenesie. Tieto zručnosti je potrebné precvičiť vždy, keď narazíte na chybu. Väčšine publika to nevadí a často ani nepočuje a nepamätá si chyby, pokiaľ nie je prerušená rytmika alebo melodická linka.
+
+Spomalenie pri očakávaných zbabraných tónoch môže byť nebezpečné. Bez ohľadu na to, ako dobre je to zapamätané, hranie čohokoľvek stále závisí od ručnej pamäti. Spomalenie môže zmeniť stimuly pre ručnú pamäť a zvýšiť pravdepodobnosť zbabrania. Často môžete predísť zbabraný tón zrýchlením, takže budete viac závislí na pamäti rúk. Preto v praxi experimentujte s oboma prístupmi. Bez predchádzajúceho tréningu je zrýchlenie počas vystúpenia desivá vec.
+
+Najhoršie na zlozvykoch je, že ich odstránenie trvá tak dlho, najmä ak ide o návyky hrané RS. Preto nič nezrýchľuje rýchlosť učenia tak, ako poznať všetky zlozvyky a predchádzať im skôr, ako sa stanú zakorenenými. Napríklad čas na prevenciu zadrhávania je, keď študent prvýkrát začína s hodinami klavíra, keď sa tu a tam pár zastavení zdá byť neškodných. Na začiatku väčšina študentov nezadrháva; musia sa však okamžite naučiť hrať cez chyby -- je to zručnosť, ktorú sa musia naučiť. V tejto fáze je ľahké sa to naučiť; naučiť zadrhávajúceho študenta hrať cez chyby je na druhej strane veľmi frustrujúca úloha.
 
 \section{Skoky, PP, FF, cítenie kláves}\label{s:jumps}
 Úspešní klaviristi zvládajú skoky bez námahy, hrajú rýchlo a presne bez ohľadu na to, kde sú klávesy. Študenti bez tréningu skokov nevedia prísť na to, ako to môže niekto dokázať. Majú problémy, pretože majú tendenciu pohybovať rukou pozdĺž obráteného pohybu tvaru písmena V, čo sťažuje presné zasiahnutie klávesu, pretože ruka klesá v určitom ľubovoľnom uhle, ktorý sa mení s každým skokom. Tieto zmeny zvyšujú možnosť vynechania nôt a klávesy sú hrané pohybom do strán namiesto priamo nadol. Ďalším problémom je, že rýchle skoky sú nemožné, pretože sa na cieľové klávesy nikdy nedokážu dostať načas.
