--- a/fopp3ed-slovak.tex
+++ b/fopp3ed-slovak.tex
@@ -1104,9 +1104,23 @@ Na roztiahnutie prstov existujú dve sady svalov: jedna rozpína ​​iba dlaň
 Tí, ktorí majú \textbf{veľké ruky}, najmä hrubé prsty, majú problém hrať medzi čiernymi klávesmi. Možno budú potrebovať dodatočné skrútenie prstov, aby sa zabránilo úderu na dosku nad klaviatúrou. Jedným z riešení je hrať na bielych klávesách pred čiernymi klávesmi pomocou dodatočného skrútenia prstov. Ďalším je skrútenie ruky pronáciou alebo supináciou tak, že prsty sú bokom vložené medzi čierne klávesy, pretože prsty sú tenšie než širšie.
 
 \section{Trilky a tremolá}\label{s:trills-tremolos}
+\textbf{Trilok}\index{trilok} 2323.... hraný PR začnite precvičovaním 23 paralelnej sady (PS) \textbf{podľa postupov opísaných v} \fullref{s:parallel-sets}, cvičenie v štvoriciach atď. Na rýchle zrýchlenie tejto PS použite 2.3 PS \#1 \fullrefp{s:parallel-catalogue}, zápis 2.3 znamená 2 a 3 hrané ako interval. Pri zvyšovaní rýchlosti striedajte opakovania 23 PS a 2.3 a cvičte relaxáciu. Keď je 23 PS dostatočne rýchla, cvičte 32, potom 232, potom 2323 atď. Rýchly začiatok hrania prvých dvoch tónov je trik na rýchle trilky a PS 23 PS najlepší spôsob, aj keď sa stanete odborníkom na trilky. S ostatnými prstami treba zaobchádzať podobne.
+
+Rýchle trilky sa zásadne líšia od pomalých trilkov, pretože pri rýchlych trilkoch je dôležitá hybnosť. Očakávajte preto zmenu pocitu trilkovania počas toho ako zrýchľujete. Jedným z dôsledkov hybnosti je, že rýchle trilky fungujú najlepšie pri rezonančných frekvenciách. Nebuďte prekvapení, ak niektoré frekvencie (rýchlosti) fungujú lepšie ako iné -- je to normálne. Najprv cvičte len pri frekvenciách, ktoré fungujú dobre; akonáhle sa zlepšíte nad určitú úroveň, budete môcť ľahšie meniť rýchlosť.
+
+Relaxácia je pre trilok kritickejšia než takmer akákoľvek iná technika, pretože je potrebná rýchla rovnováha hybnosti; existuje príliš veľa spojení na to, aby sme sa pri dosiahnutí rýchlosti spoliehali iba na paralelizmus. Proti hybnosti pohybu prsta musí pôsobiť rotácia ramena. Stres uzamkne prsty k väčším článkom, ako sú ruky a paže, čím sa zvýši efektívna hmotnosť prstov. Väčšia hmotnosť znamená pomalší pohyb: kolibrík môže mávať krídlami rýchlejšie ako kondor a malý hmyz ešte rýchlejšie ako kolibrík (tichý hukot kolibríka vs. vysoké kňučanie komára). Je preto dôležité už od začiatku zakomponovať do cvičenia trilku úplnú relaxáciu, čím oslobodíte prsty od ruky.
+
+Trilkovanie vyžaduje neustálu údržbu. Aby ste hrali dobre trilky, je potrebné cvičiť trilky každý deň. Naučte sa skladbu s množstvom trilov a hrajte ju často; pre PR je dobrou skladbou záver Beethovenovej Waldsteinovej sonáty op. 53, tretia časť, začínajúca od taktu 176. Bachove Invencie (\#4, 7, 9, 10, 12) sú dobré na precvičovanie pomalých trilkov. Staršie metódy výučby odporúčali prispôsobiť trilkové noty s notami v druhej ruke (spomalením pri cvičení), ako to naznačil Palmer (JS Bach, Willard A. Palmer Edition). Najlepšou metódou je naučiť sa rýchle trilky, ako je uvedené vyššie, a naučiť sa trilkovať \emph{nezávisle} od druhej ruky, akoukoľvek rýchlosťou.
+
+Trilok nie je séria staccat. Končeky prstov musia medzi jednotlivými tónmi zostať v spodnej časti stlačenia klávesu; t.j. chytač klavíra musí byť zapojený po každom tóne, aby bolo kladivko nehybné; ak nie, prepadne a kontrola nad ním sa stratí, čo bude mať za následok nerovnomerné alebo vynechané noty. Ale nestláčajte silno, pretože to spomalí trilok; stačí váha ramena.
+
+Berte na vedomie minimálny zdvih potrebný na to, aby opakovanie fungovalo. Táto vzdialenosť zdvihu môže byť takmer dvakrát vyššia pre pianíno ako pre krídlo. Rýchlejšie trilky vyžadujú menšie zdvihy; preto vo vzpriamenej polohe možno budete musieť spomaliť. Rýchle trilky na lacnejších elektronických klavíroch môžu byť ťažké, pretože ich mechaniky sú podradné; To je jeden z dôvodov pre nákup drahších modelov. Ak chcete otestovať digitály klavír, použite trilok. Ako pri každom technickom cvičení, o ktorom sa hovorí v tejto knihe (najmä pri tých, ktoré používajú PS), vždy aplikujte cvičenie staccato pre posledný krok osvojenia techniky, dokonca aj pre trilky.
+
+\textbf{Tremolá}\index{tremolá} sa cvičia presne rovnakým spôsobom ako trilky; stačí nahradiť paralelnú sadu 23 paralelnou sadou 15. Tremolá sú podrobne spracované v \fullref{s:beethoven-patetique}.
 
 \section{Pohyby rúk}\label{s:hand-motions}
 \ 
+
 \section{Hranie rukami spolu}\label{s:hands-together}
 Ako viete, že ste pripravení začať hrať RS? Dobrým kritériom je rýchlosť RZ. Typicky je maximálna rýchlosť RS 50\% až 90\% pomalšej rýchlosti PR alebo ĽR. Všeobecne platí, že rýchlosť RZ je výrazne vyššia ako konečná rýchlosť, zvyčajne 110\% až 150\% konečnej rýchlosti, uvoľnená a pod kontrolou.
 
