--- a/fopp3ed-slovak.tex
+++ b/fopp3ed-slovak.tex
@@ -1119,7 +1119,23 @@ Berte na vedomie minimálny zdvih potrebný na to, aby opakovanie fungovalo. Tá
 \textbf{Tremolá}\index{tremolá} sa cvičia presne rovnakým spôsobom ako trilky; stačí nahradiť paralelnú sadu 23 paralelnou sadou 15. Tremolá sú podrobne spracované v \fullref{s:beethoven-patetique}.
 
 \section{Pohyby rúk}\label{s:hand-motions}
-\ 
+\textbf{Pohyby rúk}\index{pohyb!ruky} sú tajomstvom získavania techniky a experimentovania. Pri sledovaní koncertného klaviristu nie je väčšina technických pohybov rúk rozoznateľná. Sú príliš malé a rýchle, takže väčšina viditeľných pohybov je prehnaných alebo irelevantných pre techniku, pokiaľ neviete, čo máte hľadať. Pohyby ruky: paralelný prst \fullrefp{s:parallel-sets}, \fullrefp{s:forearm-rotation}, \fullrefp{s:thumb-under}, \fullrefp{s:arpeggio} a zachytenie zápästia \fullrefp{s:fast-octaves} už boli diskutované.
+
+Všetky pohyby prstov musia byť podporované hlavnými svalmi paží; neexistuje nič také ako pohyb jedného prsta -- akýkoľvek pohyb prsta zahŕňa celé telo. O pohyboch rúk sa tu hovorí len stručne; viac podrobností nájdete v referenciách: \hyperlink{r:fink}{Fink} alebo \hyperlink{r:sandor}{Sándor} a \hyperlink{r:mark}{Mark} pre anatómiu.
+
+\textbf{Pronácia a supinácia}\index{pronácia}\index{supinácia}: Na predlaktí sú dve kosti, väčšia radius, ktorý sa spája s palcom, a menšia ulna, ktorá sa spája s malíčkom \hyperlink{r:mark}{Mark, Thomas}. Ulna je držaná v polohe nadlaktím. Ruka sa otáča rotáciou radiusu proti ulne; to spôsobuje, že sa palec pohybuje viac ako malíček a je to hlavný pohyb pri hraní palca. Rotácia palca nadol sa nazýva pronácia a rotácia smerom nahor sa nazýva supinácia.
+
+\textbf{Pohyb zápästia}\index{pohyb!zápästie}: Všeobecné pravidlo zápästia je zdvihnúť zápästie pre hranie malíčka a znížiť ho, aby sa mohlo hrať palcom. Toto nie je tvrdé pravidlo; existuje veľa výnimiek, pretože prakticky každý pohyb je kombináciou pohybov. Kombináciou pohybu zápästia s pronáciou-supináciou môžete vytvoriť rotačné pohyby na hranie opakujúcich sa pasáží, ako sú sprievody hrané ĽR alebo prvá časť Beethovenovej Sonáty mesačného svitu (PR). Zápästie je možné posúvať nahor alebo nadol a zo strany na stranu. Všetko úsilie by sa malo vynaložiť tak, aby hrací prst bol rovnobežný s predlaktím; toto sa dosiahne pohybom zápästia zo strany na stranu. Táto konfigurácia kladie najmenšie množstvo laterálneho napätia na šľachy pohybujúce sa prstami a znižuje šance na zranenia, ako je syndróm karpálneho tunela \fullrefp{s:injury}. Zvyčajné hranie (alebo strojopis) so zápästím natiahnutým do strany môže spôsobiť zranenie. Predpokladom celkového uvoľnenia je aj uvoľnené zápästie. Väčšina študentov si pod pojmom pružné zápästie predstaví zápästie, ktoré sa voľne pohybuje hore a dole, ale pohyb do strán je dôležitejší a ťažko sa kultivuje. Pri nízkom sedení sa dá zápästie rýchlo otočiť nabok pomocou rotácie predlaktia; to by mohol byť jeden z dôvodov, prečo niektorí slávni klaviristi sedia tak nízko.
+
+Vedieť ako \textbf{kĺzať prsty}\index{prsty!kĺzanie} vám umožní hrať s istotou, aj keď sú klávesy šmykľavé alebo keď sú mokré od potu. \textbf{Nikdy sa nespoliehajte na trenie povrchu klávesy pri hraní nôt}, pretože to pre vás nebude vždy k dispozícii a môže to viesť k stresu a poraneniu špičky prsta. Závislosť od trenia je jedným z tých zlých návykov, ktoré môžu spôsobiť množstvo problémov. Zdvihnutie zápästia spôsobí, že počas stlačenia klávesu sa prsty posunú smerom k vám. Zníženie zápästia spôsobí skĺznutie prstov smerom od vás. Precvičte každý z týchto posuvných pohybov všetkými piatimi prstami. So stacionárnym zápästím prsty nekĺžu, aj keď sú klávesy klzké! Ešte lepšie je, že posúvanie prstov nebude nikdy problematické; v skutočnosti je posúvanie prstov ďalšou technickou zručnosťou, ktorú by ste si mali precvičiť (pozri driapanie nižšie).
+
+Na kontrolu trenia medzi prstami a klávesmi dokáže väčšina zvlhčovačov (Lubriderm, Eucerin) zázraky, ale bude to vyžadovať určité experimentovanie, kým sa ich naučíte správne používať. Najprv musíte naniesť dostatočné množstvo, aby účinkoval. Musíte však počkať aspoň niekoľko minút, kým sa všetok ten hydratačný krém úplne vstrebe do pokožky; inak sa zotrie z klávesov a budú šmykľavé. Dokonca aj po úplnom vstrebaní akákoľvek vlhkosť na pokožke, ako napríklad pot, spôsobí, že prsty budú veľmi klzké.
+
+\textbf{Výpad a ťah}\index{výpad}\index{ťah}: Ťah je tlačný pohyb smerom k padacej doske, zvyčajne sprevádzaný miernym zdvihnutím zápästia. Pri zakrivených prstoch výpadový pohyb spôsobuje, že vektorová sila ruky pohybujúcej sa dopredu smeruje pozdĺž kostí prstov. To pridáva kontrolu a silu. Je teda užitočný na hranie akordov, no môže spôsobiť zranenie. Ťahanie je podobný pohyb smerom od padacej dosky a nespôsobuje zranenie. V týchto pohyboch môže byť celkový pohyb väčší ako vektorová zložka smerom nadol (pokles klávesu), čo umožňuje väčšiu kontrolu. Výpad je jedným z hlavných dôvodov, prečo je štandardná poloha prstov zakrivená. Skúste zahrať akýkoľvek veľký akord s mnohými tónmi, najprv spustite ruku priamo dole a potom použite výpadový pohyb. Môžete dosiahnuť lepšie výsledky s výpadom v porovnaní s pohybom priamo dole. Ťah je užitočný pri niektorých legátových a mäkkých pasážach. Preto pri precvičovaní akordov vždy experimentujte s pridaním nejakého výpadu alebo ťahu. Výpad a ťah využívajú rôzne sady svalov; takže únavu možno znížiť prepínaním medzi nimi.
+
+\textbf{Driapanie a vrhnutie}\index{driapanie}\index{vrhnutie}: Driapanie posúva končeky prstov do dlane (zvyšuje sa skrútenie) a vrhnunie je opačné: otváranie prstov do ich rovnejšej polohy. Okrem pohybu končekmi prstov nahor a nadol ich možno pri hraní aj posúvať dovnútra a von. Tieto pohyby pridávajú väčšiu kontrolu, najmä pre legato a mäkké pasáže, ako aj pre hranie staccata. Rovnako ako výpad a ťah, tieto pohyby umožňujú väčší pohyb s menším ponorom klávesy. Namiesto toho, aby ste sa vždy pokúšali spustiť prsty priamo nadol, aby sa kláves ponoril, skúste experimentovať s nejakým driapaním alebo vrhnutím, aby ste zistili, či to pomôže. Všimnite si, že pohyb driapania je oveľa prirodzenejší a ľahšie sa vedie ako priamy pohyb dole. Priamy pohyb končekom prsta nadol je zložitá kombinácia driapania a vrhnutia. Hranie plochými prstami možno považovať za jednu z foriem driapania.
+
+\textbf{Švihnutie}\index{švihnutie}: Švihnutie je rýchla rotácia, po ktorej nasleduje protirotácia ruky; rýchla kombinácia pronácia-supinácia, alebo jej opak. Videli sme, že paralelné sety sa dajú hrať akoukoľvek rýchlosťou. Pri rýchlom hraní sa stáva problémom pripojenie paralelných sád. Jedným z riešení je švihnutie, najmä ak je zapojený palec, ako pri stupniciach a arpeggiách. Jednotlivé švihy možno vykonávať extrémne rýchlo s nulovým namáhaním. Rýchle švihy však treba znovu “dobíjať”; t.j. nepretržité rýchle švihnutie je ťažké. Pri pripájaní paralelných sád je možné švihnutie použiť na prehranie spojenia a potom ho znova dobiť počas paralelnej súpravy.
 
 \section{Hranie rukami spolu}\label{s:hands-together}
 Ako viete, že ste pripravení začať hrať RS? Dobrým kritériom je rýchlosť RZ. Typicky je maximálna rýchlosť RS 50\% až 90\% pomalšej rýchlosti PR alebo ĽR. Všeobecne platí, že rýchlosť RZ je výrazne vyššia ako konečná rýchlosť, zvyčajne 110\% až 150\% konečnej rýchlosti, uvoľnená a pod kontrolou.
@@ -1665,7 +1681,7 @@ Naučte sa robiť hudbu \textit{predtým}, než sa naučíte techniku. Celé tel
 
 Napísané z pohľadu psychológa. Obsahuje veľmi málo analytických rád v oblasti technického rozvoja a metód cvičenia. Má pekné spracovanie mentálnej vizualizácie (pozri hranie v mysli v Changovej knihe). Vhodné pre tých, ktorí sa dopúšťajú psychologických chýb (kto nie?), a pokrýva správne/zlé psychické prístupy a faktory prostredia od cvičenia po vystúpenie. Vhodné pre začínajúcich študentov, ktorí nie sú oboznámení s dennými požiadavkami klaviristov alebo pre tých, ktorí nemali skúsenosti s vystupovaním. Umenie a psychológia môžu byť prekvapivo blízke - “umelecký typ” čitateľov sa môže tešiť z tejto krátkej knihy 
 \medskip\\
-\textbf{Fink, Seymour}, “Mastering Piano Technique”, 1992, 187P, výborný zoznam odporúčanej literatúry; k dispozícii je tiež video. 
+\textbf{\hypertarget{r:fink}{Fink, Seymour}}, “Mastering Piano Technique”, 1992, 187P, výborný zoznam odporúčanej literatúry; k dispozícii je tiež video. 
 
 Najviac učená zo všetkých kníh, sú tu uvedené referencie, ako sa patrí na prácu univerzitného profesora. Vedecké pojednanie používajúce správnu terminológiu (na rozdiel od Whitesideovej, ktorá si často neuvedomovala štandardnú terminológiu), ľahká na pochopenie, začína s ľudskou anatómiou a jej vzťahom ku klavíru, nasleduje zoznam pohybov zúčastňujúcich sa pri hre na klavíri, vrátane pedálu. Stupnica nesmie byť hraná metódou palec pod, ale pod palec pod je dôležitý pohyb (strana 115). Ilustruje každý pohyb a zodpovedajúce klavírne cvičenia. Dobrý popis poklesu vplyvom gravitácie. Prísne mechanický prístup, ale táto kniha kladie dôraz na produkovanie bohatšieho tónu a hranie s emóciami. Pohyby je ťažké rozlúštiť z diagramov, takže je žiaduce, aby ste si kúpili video. Musíte si prečítať buď knihu od Finka alebo Sandora; najlepšie od oboch, pretože pristupujú k podobným témam z rôznych uhlov pohľadu. Niektorí čitatelia môžu milovať jednu a nenávidieť druhú. Fink je založený na cvičeniach, Sandor je založený viac na príkladoch z klasických skladieb. 
 
@@ -1724,7 +1740,7 @@ Táto kniha je ako zhustená forma Changovej knihy. Tento klavirista, učiteľ k
 
 V závislosti na osobe, naučenie môže trvať od 3 mesiacov do 4 rokov; mali by ste cvičiť každý deň. Nakoniec, asi jedna stránka nápadov na pokročilé čítanie z listu. \textbf{MUSÍTE SI PREČÍTAŤ.}
 \medskip\\
-\textbf{Sandor, Gyorgy}, “On Piano Playing”, 1995, 240p, žiadne odkazy!
+\textbf{\hypertarget{r:sandor}{Sandor, Gyorgy}}, “On Piano Playing”, 1995, 240p, žiadne odkazy!
 
 Línia učiteľov: Bartók-Kodály-Sandor.\\
 Kompletné a akademické, ale je to najdrahšia kniha. Obsahuje väčšinu materiálu ako Fink, zdôrazňuje metódu váhy ramien. Preberá: voľný pád, stupnicu (palec-cez metóda, má najpodrobnejší popis ako hrať stupnice a arpeggia, strana 52 až 78), rotácie, staccato, ťah, pedále, tón, cvičenie, ukladanie do pamäte, výkon. Prevedie vás tým, ako sa naučiť celú Waldstein sonátu (Beethoven). 
